--- a/core/app/views/gaku/class_groups/semesters/edit.js.erb
+++ b/core/app/views/gaku/class_groups/semesters/edit.js.erb
@@ -1,2 +1,3 @@
 $('#modal-dialogs').html("<%= render_js_partial('semester_modal', {:semester => @semester}) %>");
 $('#semester-modal').modal('show');
+$('.remote-form').enableValidations();
