--- a/core/app/views/gaku/notes/_form.html.slim
+++ b/core/app/views/gaku/notes/_form.html.slim
@@ -1,16 +1,13 @@
-= form_for [@notable, @note], :remote => true do |note_form|
-  - if note_form.object.new_record?
-    b= t('note.new')
-    .row-fluid.mt-l
-      .span12.well style="margin-bottom:20px"
-        = render 'gaku/shared/form_fields/note_form_fields', :note_form => note_form
+= remote_form_for [@notable, @note] do |f|
+  .row-fluid.mt-l
+    .span12.well style="margin-bottom:20px"
+      = render 'gaku/shared/form_fields/note_form_fields', :f => f
 
-        .row-fluid
-          .span12
-            .span6
-              = submit_button t('note.save'), :id => "submit-" + @notable_resource + "-note-button"
-            .span6
-              = link_to_cancel :id => "cancel-" + @notable_resource + "-note-link"
+  .row-fluid
+    .span12
+      .span6
+        = submit_button t(:'note.save'), :id => "submit-" + @notable_resource + "-note-button"
+      = link_to_cancel :id => "cancel-" + @notable_resource + "-note-link"
 
 javascript:
   window.notable_resource = '#{@notable_resource}';
