--- a/core/app/views/gaku/class_groups/_form.html.slim
+++ b/core/app/views/gaku/class_groups/_form.html.slim
@@ -1,17 +1,11 @@
 = remote_form_for @class_group do |f|
   .control-group
     .span12.well
-
       .row-fluid
-        .span4
-          = f.number_field :grade, :class => "span12", :label => t('class_group.grade')
-        .span4
-          = f.text_field :name, :class => "span12", :label => t('class_group.name')
-        .span4
-          = f.text_field :homeroom, :class => "span12", :label => t('class_group.homeroom')
+         = render 'form_fields', :f => f
 
       .row-fluid
         .span12
-          .span6
+          .span9
             = submit_button t('class_group.save'), :id => 'submit-class-group-button'
           = link_to_cancel :id => "cancel-class-group-link"
