--- a/core/app/views/gaku/class_groups/edit.js.erb
+++ b/core/app/views/gaku/class_groups/edit.js.erb
@@ -1,2 +1,3 @@
 $('#modal-dialogs').html('<%= render_js_partial("class_group_modal", {:class_group => @class_group}) %>');
 $('#class-group-modal').modal('show');
+$('.remote-form').enableValidations();
