--- a/core/app/views/gaku/class_groups/students/_students.html.slim
+++ b/core/app/views/gaku/class_groups/students/_students.html.slim
@@ -1,20 +1,20 @@
 #class-group-students
   .row-fluid
     .pull-left
-      h4.h4-vm.class-group-enrollments-count
-        = print_count(@class_group.class_group_enrollments.count, t_student_list)
+      = count_div 'class-group-enrollments-count' do
+        = print_count @class_group.class_group_enrollments.count, t_student_list
     .pull-right
-      = ajax_link_to_new t('student.add'), student_chooser_class_group_path(:class_group_id => @class_group.id), :id => 'new-class-group-student-link'
+      = ajax_link_to_new t(:'student.add'), student_chooser_class_group_path(:class_group_id => @class_group.id), :id => 'new-class-group-student-link'
   .row-fluid
     .span12
       hr
   .row-fluid
     .span12
-      table#class-group-students-index.index.table.table-striped.table-bordered.table-condensed
+      = table_for 'class-group-students-index' do
         thead
           tr
-            th.btn-inverse = t('surname')
-            th.btn-inverse = t('name')
-            th.btn-info style="width:61px" =t 'manage'
+            = th t(:'surname')
+            = th t(:'name')
+            = th_actions 2
         tbody
           = render :partial => 'gaku/class_groups/students/student', :collection => @class_group.class_group_enrollments, :as => 'enrollment'
