--- a/core/app/views/gaku/class_groups/students/new.js.erb
+++ b/core/app/views/gaku/class_groups/students/new.js.erb
@@ -1,2 +1,3 @@
 $('#modal-dialogs').html('<%= render_js_partial("student_modal", {:class_group_enrollment => @class_group_enrollment}) %>');
 $('#student-modal').modal('show');
+$('.remote-form').enableValidations();
