--- a/core/app/views/gaku/notes/_note_modal.html.slim
+++ b/core/app/views/gaku/notes/_note_modal.html.slim
@@ -1,19 +1,16 @@
 - model = @note || Gaku::Note.new
 - model_class = model.class
-.modal.hide#edit-note-modal wmode="opaque"
-  
-  = form_for [@notable, model], :remote => true, :html => {:'data-type' => 'script', :class => 'form-horizontal' } do |note_form| 
-    .modal-header
-      button.close type="button" data-dismiss="modal" x
-      h3= t('note.edit')
+
+= modal_for 'edit-note-modal' do
+  = modal_header t(:'note.edit')
+  = modal_form_for [@notable, model] do |f|
     .modal-body
-      .validation-error
-      .form-inputs
+      .row-fluid
+        .span12.well
+          = render 'gaku/shared/form_fields/note_form_fields', :f => f
 
-        = render 'gaku/shared/form_fields/note_form_fields', :note_form => note_form
-
-        .row-fluid
-          .span12
-            .span6 
-              = note_form.submit t('note.save'), :id => 'submit-' + @notable_resource + '-note-button', :class => "span12 btn btn-primary", :style => "min-height:0px; float: left;"
-              = link_to_cancel :id => 'cancel-' + @notable_resource + '-note-link', :class => 'btn'
+      .row-fluid
+        .span12
+          .span9
+            = submit_button t(:'note.save'), :id => 'submit-' + @notable_resource + '-note-button'
+          = link_to_cancel :id => 'cancel-' + @notable_resource + '-note-link'
