--- a/core/app/views/gaku/notes/edit.js.erb
+++ b/core/app/views/gaku/notes/edit.js.erb
@@ -1,2 +1,3 @@
 $('#modal-dialogs').html('<%= render_js_partial("note_modal", {:note => @note}) %>');
 $('#edit-note-modal').modal('show');
+$('.remote-form').enableValidations();
