--- a/core/app/views/gaku/notes/show.html.slim
+++ b/core/app/views/gaku/notes/show.html.slim
@@ -1,12 +1,12 @@
 -unless @note.nil? or @note.new_record? or !@note
   .row-fluid
     .span12.well
-      table.index.table.table-striped.table-bordered.table-condensed *{:id => [ @notable_resource + '-note-table']}
+      = table_for '#{@notable_resource}-note-table' do
         thead
           tr
             th
-            th = t('note.title')
-            th = t('note.content')
+            th = t(:'note.title')
+            th = t(:'note.content')
         tbody
           td = @note.id
           td = @note.title
