--- a/core/app/views/gaku/course_groups/_course_group_modal.html.slim
+++ b/core/app/views/gaku/course_groups/_course_group_modal.html.slim
@@ -1,6 +1,12 @@
-.modal.hide#edit-course-group-modal
-	.modal-header
-		button type="button" class="close" data-dismiss="modal" ×
-		h4 = t('course_group.edit')
-	.modal-body
-		=render 'form'
+= modal_for 'edit-course-group-modal' do
+  = modal_header t(:'course_group.edit')
+  = modal_form_for @course_group do |f|
+    .modal-body
+      .row-fluid.mt-l
+        .span12.well
+          = render 'form_fields', :f => f
+      .row-fluid
+        .span12
+          .span9
+            = submit_button t(:'course_group.save'), :id => 'submit-course-group-button'
+          = link_to_cancel :id => 'cancel-course-group-link'
