--- a/core/app/views/gaku/course_groups/_form.html.slim
+++ b/core/app/views/gaku/course_groups/_form.html.slim
@@ -1,10 +1,9 @@
-= form_for @course_group, :remote => true do |f|
+= remote_form_for @course_group do |f|
   .row-fluid.mt-l
     .span12.well
-      = f.label :name, t('course_group.name')
-      = f.text_field :name, :class => "span12"
+      = render 'form_fields', :f => f
       .row-fluid
         .span12
-          .span6
-            = submit_button t('course_group.save'), :id => 'submit-course-group-button'
+          .span9
+            = submit_button t(:'course_group.save'), :id => 'submit-course-group-button'
           = link_to_cancel :id => 'cancel-course-group-link'
