--- a/core/app/views/gaku/course_groups/course_group_enrollments/_form.html.slim
+++ b/core/app/views/gaku/course_groups/course_group_enrollments/_form.html.slim
@@ -1,12 +1,10 @@
-= form_for [@course_group, @course_group_enrollment], { :remote => true } do |f|
+= remote_form_for [@course_group, @course_group_enrollment] do |f|
   .row-fluid.mt-l
     .span12.well
-
-      = f.label :course_code, t('course.code'), :class => "control-label"
-      = f.select :course_id, @courses.collect { |c| ["#{c.code}", c.id] }, {:prompt => t('course.choose')}, :class => "span12 validate[required]"
+      = f.select :course_id, courses, {:prompt => t(:'course.choose')}, :class => "span12", :label => t(:'course.code')
       = f.hidden_field :course_group_id, :value => @course_group.id
       .row-fluid
         .span12
-          .span6
-            = submit_button t('course.save'), :id => 'submit-course-group-enrollment-button'
+          .span9
+            = submit_button t(:'course.save'), :id => 'submit-course-group-enrollment-button'
           = link_to_cancel :id => "cancel-course-group-enrollment-link"
