--- a/core/app/views/gaku/course_groups/edit.js.erb
+++ b/core/app/views/gaku/course_groups/edit.js.erb
@@ -1,2 +1,3 @@
 $('#modal-dialogs').html('<%== render_js_partial("gaku/course_groups/course_group_modal", {:course_group => @course_group}) %>');
 $('#edit-course-group-modal').modal('show');
+$('.remote-form').enableValidations();
