--- a/core/app/views/gaku/course_groups/index.html.slim
+++ b/core/app/views/gaku/course_groups/index.html.slim
@@ -3,21 +3,21 @@
   .span10
     .row-fluid
       .pull-left
-        h4.h4-vm.course-groups-count
-          = print_count(@count, t('course_group.list'))
+        = count_div 'course-groups-count' do
+          = print_count @count, t(:'course_group.list')
       .pull-right
-        = ajax_link_to_new t('course_group.new'), new_course_group_path, :id => "new-course-group-link"
+        = ajax_link_to_new t(:'course_group.new'), [:new, :course_group], :id => "new-course-group-link"
     .row-fluid
-      #course-group-form-errors
+      /#course-group-form-errors
       #new-course-group.hide
       .span12
         hr/
     .row-fluid
       .span12.well
-        table#course-groups-index.index.table.table-striped.table-bordered.table-condensed
+        = table_for 'course-groups-index' do
           thead
             tr
-              th.btn-inverse = sortable 'name',  t('course_group.name')
-              th.btn-info style="width:94px" = t('manage')
+              = th(sortable 'name',  t(:'course_group.name'))
+              = th_actions 3
           tbody
-            =render :partial => 'course_group', :collection => @course_groups, :as => :course_group
+            = render :partial => 'course_group', :collection => @course_groups, :as => :course_group
