--- a/core/app/views/gaku/courses/_courses.html.slim
+++ b/core/app/views/gaku/courses/_courses.html.slim
@@ -1,4 +1,4 @@
-table#courses-index.index.table.table-striped.table-bordered.table-condensed
+= table_for 'courses-index' do
   thead
     tr
       th*{"class" => "btn-inverse", "data-field" => "#{t('syllabus.code')}-#{t('syllabus.singular')}-#{t('course.code')}-[#{t('syllabus.code')}]: #{t('syllabus')}-#{t('course.code')}"} = t('syllabus.code')
@@ -7,4 +7,4 @@ table#courses-index.index.table.table-striped.table-bordered.table-condensed
       th*{"class" => "btn-inverse", "data-field" => t('num_enrolled')} = t('num_enrolled')
       th.btn-info style="width:94px" = t('manage')
   tbody
-    =render :partial => 'course', :collection => @courses, :as => 'course'
+    = render :partial => 'course', :collection => @courses, :as => 'course'
