--- a/core/app/views/gaku/courses/_form.html.slim
+++ b/core/app/views/gaku/courses/_form.html.slim
@@ -1,24 +1,10 @@
-= form_for @course, :remote => true do |course_form|
-  - if @course.errors.any?
-    .alert.alert-error
-      strong
-        = pluralize(@course.errors.count, "error")
-        | prohibited this course from being saved:
-      ul
-        - @course.errors.full_messages.each do |msg|
-          li= msg
+= remote_form_for @course do |f|
   .row-fluid.mt-l
     .span12.well
-      .span6
-        = course_form.label :syllabus_id, t('syllabus.singular')
-        = course_form.select :syllabus_id, Gaku::Syllabus.all.collect { |s| [s.name, s.id] }, {}, :class => "span12"
+      = render 'form_fields', :f => f
 
-      .span6
-        = course_form.label :code, t('course.code')
-        = course_form.text_field :code, :placeholder => t('course.code_sample'), :class => "span12 validate[required]"
-
-      .row-fluid
-        .span12
-          .span6
-            = submit_button t('course.save'), :id => 'submit-course-button'
-          = link_to_cancel :id => "cancel-course-link"
+  .row-fluid
+    .span12
+      .span9
+        = submit_button t(:'course.save'), :id => 'submit-course-button'
+      = link_to_cancel :id => "cancel-course-link"
