--- a/core/app/views/gaku/courses/enrollments/_enrollments.html.slim
+++ b/core/app/views/gaku/courses/enrollments/_enrollments.html.slim
@@ -1,22 +1,22 @@
 #new-course-class-group-form-errors
 #new-course-class-group style='display:none'
-  =render :partial => 'gaku/courses/enrollments/class_groups/form', :course => @course, :new_course_enrollment => @new_course_enrollment
+  = render :partial => 'gaku/courses/enrollments/class_groups/form', :course => @course, :new_course_enrollment => @new_course_enrollment
 .row-fluid
   .pull-left
     h4.h4-vm.course-students-count
       = print_count(@course.students.count, t('student.list'))
   .pull-right
     #new-course-student-div.pull-right
-      = ajax_link_to_new t('student.add'), student_chooser_course_path(:course_id => @course.id), :id => 'new-course-student-link'
+      = ajax_link_to_new t(:'student.add'), student_chooser_course_path(:course_id => @course.id), :id => 'new-course-student-link'
     #new-course-class-group-div.pull-right.mr-s
-      = ajax_link_to_new t('class_group.add'), "", :id => 'new-course-class-group-link'
+      = ajax_link_to_new t(:'class_group.add'), "", :id => 'new-course-class-group-link'
 
 .row-fluid
   .span12
     hr
 .row-fluid
   .span12
-    table#course-students-index.table.table-condensed.table-striped.table-bordered
+    = table_for 'course-students-index' do
       thead
         tr
           th.btn-inverse*{"data-field" => t('student.name')}
