[fix] flash message for exma portion, t() and add new locale lines

--- a/core/app/views/gaku/exams/exam_portions/create_exam_portion.js.erb
+++ b/core/app/views/gaku/exams/exam_portions/create_exam_portion.js.erb
@@ -16,7 +16,7 @@ $('.exam-exam-portions-count').html("<%= print_count(@portions_count+1, t_exam_p
     $('.exam-portions-weight tbody').append('<tr></tr>');
   }
 
-  $('.exam-portions-weight thead tr').append('<th class="btn-warning" data-id=<%= @exam.exam_portions.last.id%>> <%= @exam.exam_portions.last.name+ " " + t("exams.weight") %> </th>')
+  $('.exam-portions-weight thead tr').append('<th class="btn-warning" data-id=<%= @exam.exam_portions.last.id%>> <%= @exam.exam_portions.last.name+ " " + t("exam.weight") %> </th>')
   $('.exam-portions-weight tbody tr').append('<%= render_js_partial("gaku/exams/exam_portions/exam_portion_weight_td", {:portion => @exam.exam_portions.last}) %>')
   var total = $('#weight-total').text();
   var totalFl = parseFloat(total)+ <%= @exam.exam_portions.last.weight.to_f %>;
