[fix] th icon for primary

--- a/core/app/views/gaku/students/contacts/_contacts.html.slim
+++ b/core/app/views/gaku/students/contacts/_contacts.html.slim
@@ -13,7 +13,7 @@
     = table_for 'student-contacts-index' do
       thead
         tr
-          = th_icon 'check'
+          = th_icon 'home'
           = th t(:'contact_type.singular')
           = th t(:'contact.data')
           = th t(:'contact.details')
