wip syllabus add exams

--- a/core/app/views/gaku/syllabuses/show.html.slim
+++ b/core/app/views/gaku/syllabuses/show.html.slim
@@ -35,10 +35,10 @@
             .row-fluid
               .span12
                 #new-existing-exam-errors
-                #new-existing-exam style='display:none;padding-top:10px'
+                #new-existing-exam.hide style='padding-top:10px'
                   =render 'gaku/syllabuses/exams/select_form'
 
-                #new-syllabus-exam style='display:none;padding-top:10px'
+                #new-syllabus-exam.hide style='padding-top:10px'
                   =render 'gaku/syllabuses/exams/form'
             .row-fluid
               .span12
