--- a/core/app/views/gaku/students/class_group_enrollments/create.js.erb
+++ b/core/app/views/gaku/students/class_group_enrollments/create.js.erb
@@ -5,4 +5,6 @@
 	$('td#class-enrollment-name').html('<%= @class_group.name %>');
 	$('td#class-enrollment-seat-number').html('<%= @class_group_enrollment.seat_number %>');
 	$('.validation-error').html('');
+
+	$('#student-class-group-enrollment').html('<%= "#{@student.class_groups.last.grade.try(:to_s)} - #{@class_group.name}" %>')
 <% end %>
