--- a/core/app/views/gaku/students/addresses/_address_modal.html.slim
+++ b/core/app/views/gaku/students/addresses/_address_modal.html.slim
@@ -2,11 +2,12 @@
   = modal_header t(:'address.edit')
   = modal_form_for [@student, @address] do |f|
     .modal-body
-      .row-fluid
-        = hidden_field_tag :student_id, @student.id
-        = render 'gaku/shared/form_fields/address_form_fields', :f => f
+      .row-fluid.mt-l
+        .span12.well
+          = hidden_field_tag :student_id, @student.id
+          = render 'gaku/shared/form_fields/address_form_fields', :f => f
 
-      .row-fluid
-        .span9
-          = submit_button t(:'address.save'), :id => 'submit-student-address-button'
-        = link_to_cancel :id => 'cancel-student-address-link'
+          .row-fluid
+            .span12
+              = submit_button t(:'address.save'), :id => 'submit-student-address-button'
+              = link_to_cancel :id => 'cancel-student-address-link'
