--- a/core/app/views/gaku/students/addresses/_form.html.slim
+++ b/core/app/views/gaku/students/addresses/_form.html.slim
@@ -1,12 +1,11 @@
 = remote_form_for [@student, @address] do |f|
-  .row-fluid.mt-l
+  .row-fluid
     .span12.well
       = render 'gaku/shared/form_fields/address_form_fields',  :f => f
 
       .row-fluid
         .span12
-          .span6
-            = submit_button t(:'address.save'), :id => 'submit-student-address-button'
+          = submit_button t(:'address.save'), :id => 'submit-student-address-button'
           = link_to_cancel :id => 'cancel-student-address-link'
 
 /= javascript_include_tag 'gaku/students/addresses'
