--- a/core/app/views/gaku/admin/disposals/course_groups.js.erb
+++ b/core/app/views/gaku/admin/disposals/course_groups.js.erb
@@ -1,1 +1,1 @@
-$("#course-groups-deleted-index").html("<%= render_js_partial('gaku/admin/disposals/course_groups')) %>");
+//$("#course-groups-deleted-index").html("<%= render_js_partial('gaku/admin/disposals/course_groups')) %>");
