--- a/core/app/views/gaku/admin/disposals/exams.html.slim
+++ b/core/app/views/gaku/admin/disposals/exams.html.slim
@@ -1,5 +1,5 @@
 .row-fluid
-  table#syllabus-exams-index.index.table.table-condensed.table-striped.table-bordered
+  table#exams-index.index.table.table-condensed.table-striped.table-bordered
     thead
       tr
         th.btn-inverse = t('exam.name')
