--- a/core/app/views/gaku/admin/contact_types/_contact_type_modal.html.slim
+++ b/core/app/views/gaku/admin/contact_types/_contact_type_modal.html.slim
@@ -5,6 +5,4 @@
       .row-fluid
         = f.text_field :name, :class => "span12", :label => t(:'contact_type.name')
       .row-fluid
-        .span9
-          = submit_button t(:'contact_type.save'), :id => 'submit-admin-contact-type-button'
-        = link_to_cancel :id => 'cancel-admin-contact-type-link'
+          = buttons_for @contact_type, :nested_id => 'admin-contact-type'
