--- a/core/app/views/gaku/admin/schools/campuses/_form.html.slim
+++ b/core/app/views/gaku/admin/schools/campuses/_form.html.slim
@@ -5,9 +5,5 @@
       .span12.well
         = f.text_field :name, :class => "span12", :label => t(:'campus.name')
         .row-fluid
-          .span12
-            .span9
-              = submit_button t(:'campus.save'), :id => 'submit-admin-school-campus-button'
-            = link_to_cancel :id => 'cancel-admin-school-campus-link'
+          = buttons_for @school, :nested_id => 'admin-school-campus'
 
-/= javascript_include_tag 'gaku/admin/schools/campuses'
