--- a/core/app/views/gaku/admin/schools/campuses/contacts/_contact_modal.html.slim
+++ b/core/app/views/gaku/admin/schools/campuses/contacts/_contact_modal.html.slim
@@ -5,9 +5,5 @@
       .row-fluid
         = hidden_field_tag :campus_id, @campus.id
         = render 'gaku/shared/form_fields/contact_form_fields', :f => f
-
       .row-fluid
-        .span12
-          .span9
-            = submit_button t(:'contact.save'), :id => 'submit-admin-school-campus-contact-button'
-          = link_to_cancel :id => 'cancel-admin-school-campus-contact-link'
+        = buttons_for @contact, :nested_id => 'admin-school-campus-contact'
