--- a/core/app/views/gaku/admin/attendance_types/_attendance_type_modal.html.slim
+++ b/core/app/views/gaku/admin/attendance_types/_attendance_type_modal.html.slim
@@ -5,6 +5,4 @@
       .row-fluid
         = render 'form_fields', :f => f
       .row-fluid
-        .span9
-          = submit_button t(:'attendance_type.save'), :id => 'submit-admin-attendance-type-button'
-        = link_to_cancel :id => 'cancel-admin-attendance-type-link'
+      	=buttons_for @attendance_type, :nested_id => 'admin-attendance-type'
