--- a/core/app/views/gaku/admin/contact_types/_form.html.slim
+++ b/core/app/views/gaku/admin/contact_types/_form.html.slim
@@ -3,7 +3,4 @@
     .span12.well
       = f.text_field :name, :class => "span12", :label => t(:'contact_type.name')
     .row-fluid
-      .span12
-        .span9
-          = submit_button t(:'contact_type.save'), :id => 'submit-admin-contact-type-button'
-        = link_to_cancel :id => 'cancel-admin-contact-type-link'
+      =buttons_for @contact_type, :nested_id => 'admin-contact-type'
