--- a/core/app/views/gaku/admin/enrollment_status_types/_enrollment_status_type_modal.html.slim
+++ b/core/app/views/gaku/admin/enrollment_status_types/_enrollment_status_type_modal.html.slim
@@ -6,7 +6,4 @@
         = f.text_field :name, :class => "span12", :label => t(:'enrollment_status_type.name')
         = f.check_box :is_active, :label => t(:'enrollment_status_type.active')
       .row-fluid
-        .span12
-          .span9
-            = submit_button t(:'enrollment_status_type.save'), :id => 'submit-admin-enrollment-status-type-button'
-          = link_to_cancel :id => 'cancel-admin-enrollment-status-type-link'
+        = buttons_for @enrollment_status_type, :nested_id => 'admin-enrollment-status-type'
