--- a/core/app/views/gaku/admin/schools/campuses/addresses/_form.html.slim
+++ b/core/app/views/gaku/admin/schools/campuses/addresses/_form.html.slim
@@ -4,10 +4,5 @@
       = render 'gaku/shared/form_fields/address_form_fields', :f => f
 
       .row-fluid
-        .span12
-          .span9
-            = submit_button t('address.save'), :id => 'submit-admin-school-campus-address-button'
-          = link_to_cancel :id => 'cancel-admin-school-campus-address-link'
+        = buttons_for @address, :nested_id => 'admin-school-campus-address'
 
-/= javascript_include_tag 'gaku/shared/address'
-/= javascript_include_tag 'gaku/admin/schools/campuses/addresses'
