--- a/core/app/views/gaku/admin/schools/campuses/contacts/_form.html.slim
+++ b/core/app/views/gaku/admin/schools/campuses/contacts/_form.html.slim
@@ -3,11 +3,6 @@
     .span12.well
       .span12.well
         = render 'gaku/shared/form_fields/contact_form_fields', :f => f
-
         .row-fluid
-          .span12
-            .span9
-              = submit_button t(:'contact.save'), :id => 'submit-admin-school-campus-contact-button'
-            = link_to_cancel :id => 'cancel-admin-school-campus-contact-link'
+          = buttons_for @contact, :nested_id => 'admin-school-campus-contact'
 
-/= javascript_include_tag 'gaku/admin/schools/campuses/contacts'
