--- a/core/app/views/gaku/course_groups/_course_group_modal.html.slim
+++ b/core/app/views/gaku/course_groups/_course_group_modal.html.slim
@@ -6,7 +6,4 @@
         .span12.well
           = render 'form_fields', :f => f
       .row-fluid
-        .span12
-          .span9
-            = submit_button t(:'course_group.save'), :id => 'submit-course-group-button'
-          = link_to_cancel :id => 'cancel-course-group-link'
+        = buttons_for @course_group, :nested_id => 'course-group'
