--- a/core/app/views/gaku/courses/_course_modal.html.slim
+++ b/core/app/views/gaku/courses/_course_modal.html.slim
@@ -5,10 +5,6 @@
       .row-fluid.mt-l
         .span12.well
           = render 'form_fields', :f => f
-
       .row-fluid
-        .span12
-          .span9
-            = submit_button t(:'course.save'), :id => 'submit-course-button'
-          = link_to_cancel :id => "cancel-course-link"
+        = buttons_for @course, :nested_id => 'course'
 
