--- a/core/app/views/gaku/students/_form.html.slim
+++ b/core/app/views/gaku/students/_form.html.slim
@@ -3,7 +3,4 @@
     .span12.well
       =render :partial => 'student_form_fields', :locals => { :f => f }
       .row-fluid
-        .span12
-          .span6
-            = submit_button t(:'student.create'), :id => 'submit-student-button'
-          = link_to_cancel :id => 'cancel-student-link'
+        =buttons_for @student
