--- a/core/app/views/gaku/students/addresses/_address_modal.html.slim
+++ b/core/app/views/gaku/students/addresses/_address_modal.html.slim
@@ -6,8 +6,5 @@
         .span12.well
           = hidden_field_tag :student_id, @student.id
           = render 'gaku/shared/form_fields/address_form_fields', :f => f
-
           .row-fluid
-            .span12
-              = submit_button t(:'address.save'), :id => 'submit-student-address-button'
-              = link_to_cancel :id => 'cancel-student-address-link'
+            = buttons_for @address, :nested_id => 'student-address'
