--- a/core/app/views/gaku/students/guardians/_guardian_modal.html.slim
+++ b/core/app/views/gaku/students/guardians/_guardian_modal.html.slim
@@ -7,7 +7,4 @@
         .row-fluid.control-group
           = render 'gaku/shared/form_fields/guardian_form_fields', :f => f
         .row-fluid style="margin-top:10px"
-          .span12
-            .span9
-              = submit_button t(:'guardian.save'), :id => 'submit-student-guardian-button'
-            = link_to_cancel  :id => 'cancel-student-guardian-link'
+          =buttons_for @guardian, :nested_id => 'student-guardian'
