--- a/core/app/views/gaku/students/guardians/_new_contact_modal.html.slim
+++ b/core/app/views/gaku/students/guardians/_new_contact_modal.html.slim
@@ -3,7 +3,5 @@
   .modal-body
     = form_for [@student, @guardian, @contact], :url => [:create_modal, @student, @guardian, @contact], :remote => true do |f|
       = render 'gaku/shared/form_fields/contact_form_fields', :f => f
-      .actions
-        .span8
-          = submit_button t(:'contact.create'), :id => 'submit-student-guardian-contact-button'
-        = link_to_cancel :id => 'cancel-student-guardian-contact-link'
+      .row-fluid
+        = buttons_for @contact, :nested_id => 'student-guardian-contact'
