--- a/core/app/views/gaku/syllabuses/exams/_exam_modal.html.slim
+++ b/core/app/views/gaku/syllabuses/exams/_exam_modal.html.slim
@@ -22,6 +22,4 @@
               = exam_form.text_area :adjustments, :class => "span12", :size => "0x2"
 
           .row-fluid
-            .span6
-              = submit_button t('exam.save'), :id => 'submit-syllabus-exam-button'
-            = link_to_cancel :id => 'cancel-syllabus-exam-link'
+            = buttons_for @exam, :nested_id => 'syllabus-exam'
