--- a/core/app/views/gaku/syllabuses/exams/_form.html.slim
+++ b/core/app/views/gaku/syllabuses/exams/_form.html.slim
@@ -50,7 +50,4 @@
                       = ep_form.label :adjustments, t('exam_portion.adjustments')
                       = ep_form.text_area :adjustments, :class => "span12", :size => "0x2"
           .row-fluid
-            .span12
-              .span6
-                = submit_button t('exam.add'), :id => 'submit-syllabus-exam-button'
-              = link_to_cancel :id => 'cancel-syllabus-exam-link'
+            = buttons_for @exam, :nested_id => 'syllabus-exam'
