--- a/core/app/views/gaku/syllabuses/exams/_select_form.html.slim
+++ b/core/app/views/gaku/syllabuses/exams/_select_form.html.slim
@@ -5,7 +5,4 @@
     =f.select :exam_id, Gaku::Exam.all.reject {|e| @syllabus.exams.include?(e)}.collect{ |exam| ["#{exam.name}", exam.id]},{:prompt => t('exam.choose')}, {:class => 'chzn-select'}
   .actions
 		.row-fluid
-			.span12
-				.span6
-					= submit_button t('exam.add'), :id => 'submit-existing-exam-button'
-				= link_to_cancel :id => 'cancel-existing-exam-link'
+			= buttons_for @syllabus, :nested_id => 'existing-exam', :label => t('exam.add')
