--- a/core/app/views/gaku/admin/schools/show.html.slim
+++ b/core/app/views/gaku/admin/schools/show.html.slim
@@ -4,7 +4,7 @@
     .span12.well
       = table do
         tbody
-          tr
+          tr.school_info
             = render 'school_fields', :school => @school
   br/
   = render 'gaku/admin/schools/campuses/campuses'
