--- a/core/app/views/gaku/admin/schools/update.js.erb
+++ b/core/app/views/gaku/admin/schools/update.js.erb
@@ -1,3 +1,5 @@
 $('tr#school-<%= @school.id %>').html('<%= render_js_partial("school_unit", {:school => @school}) %>');
 $("#edit-school-modal").modal("hide");
+//edit from show
+$(".school_info").html('<%= render_js_partial("school_fields", {:school => @school}) %>');
 showNotice("<%= render_flash %>");
