--- a/core/app/views/gaku/students/contacts/_contacts.html.slim
+++ b/core/app/views/gaku/students/contacts/_contacts.html.slim
@@ -1,11 +1,12 @@
 #student-contacts
   .row-fluid
     #new-student-contact.hide
+  .row-fluid
     .pull-left
       = count_div 'student-contacts-count' do
         = print_count(@student.contacts.count, t_contact_list)
     .pull-right
-        = ajax_link_to_new t(:'contact.add'), [:new, @student, :contact], :id => 'new-student-contact-link'
+      = ajax_link_to_new t(:'contact.add'), [:new, @student, :contact], :id => 'new-student-contact-link'
 
   .row-fluid
     hr
