Refactor index and show of class_groups and course_groups

--- a/core/app/views/gaku/layouts/gaku.html.slim
+++ b/core/app/views/gaku/layouts/gaku.html.slim
@@ -15,7 +15,6 @@ html
           = render "gaku/shared/flash", :flash => flash
       #errors
       #modal-dialogs
-      = yield(:content) or yield
-      /= yield
+      = content_for?(:content) ? yield(:content) : yield
 
 
