--- a/core/app/views/gaku/class_groups/semesters/_semesters.html.slim
+++ b/core/app/views/gaku/class_groups/semesters/_semesters.html.slim
@@ -1,5 +1,4 @@
-.row-fluid
-  br/
+= index_head do
   #new-class-group-semester-form-errors
   #new-class-group-semester.hide
     = render 'gaku/class_groups/semesters/form'
@@ -8,13 +7,13 @@
       = print_count @class_group.semesters.count, t_semester_list
   .pull-right
     = ajax_link_to_new t(:'semester.add'), new_class_group_semester_path(:class_group_id => @class_group.id), :id => 'new-class-group-semester-link'
-.row-fluid
-hr
-.row-fluid
-    .span12
-      = table_for 'class-group-semesters-index' do
-        tr
-          = th t(:'period')
-          = th t(:'options')
-        tbody
-          =render :partial => 'gaku/class_groups/semesters/semester', :collection => @class_group.semesters, :as => :semester
+
+= hr
+
+= index_body do
+  = table_for 'class-group-semesters-index' do
+    tr
+      = th t(:'period')
+      = th_actions 2
+    tbody
+      =render :partial => 'gaku/class_groups/semesters/semester', :collection => @class_group.semesters, :as => :semester
