Change index_head to index_header in index layout

--- a/core/app/views/gaku/layouts/index.html.slim
+++ b/core/app/views/gaku/layouts/index.html.slim
@@ -5,7 +5,7 @@
       .row-fluid
         = yield :new_form
       .row-fluid
-        = yield :index_head
+        = yield :index_header
       .row-fluid
         .span12
           hr/
