--- a/core/app/views/gaku/class_groups/index.html.slim
+++ b/core/app/views/gaku/class_groups/index.html.slim
@@ -4,7 +4,7 @@
 = content_for :new_form do
   #new-class-group.hide
 
-= content_for :index_head do
+= content_for :index_header do
   .pull-left
     = count_div('class-groups-count') { print_count @count, t_class_group_list }
   .pull-right
