--- a/core/app/views/gaku/course_groups/index.html.slim
+++ b/core/app/views/gaku/course_groups/index.html.slim
@@ -4,7 +4,7 @@
 = content_for :new_form do
   #new-course-group.hide
 
-= content_for :index_head do
+= content_for :index_header do
   .pull-left
     = count_div 'course-groups-count' do
       = print_count @count, t(:'course_group.list')
