--- a/core/app/views/gaku/exams/exam_portions/_edit_modal.html.slim
+++ b/core/app/views/gaku/exams/exam_portions/_edit_modal.html.slim
@@ -9,7 +9,4 @@
             .span12
               =render 'gaku/exams/form_portion_fields', :ep_form => ep_form
         .row-fluid
-          .span12
-            .span9
-              = submit_button t(:'exam_portion.save'), :id => 'submit-exam-exam-portion-button'
-            = link_to_cancel :id => 'cancel-exam-exam-portion-link'
+          = buttons_for @exam_portion, :nested_id => 'exam-exam-portion'
