WIP : Refactor students viwew

--- a/core/app/views/gaku/courses/index.html.slim
+++ b/core/app/views/gaku/courses/index.html.slim
@@ -1,6 +1,8 @@
+= content_for :title do
+  = t(:'course.plural')
+
 = content_for :new_form do
   #new-course.hide
-    = render 'form'
 
 = content_for :index_header do
   .pull-left
