--- a/core/app/views/gaku/course_groups/show.html.slim
+++ b/core/app/views/gaku/course_groups/show.html.slim
@@ -1,30 +1,28 @@
 = content_for :show_header do
   = t(:'course_group.show')
 
-.row-fluid
+= well_div do
   = table do
     thead
       tr
-        th = t(:'course_group.name')
+        = th t(:'course_group.name')
     tbody
       tr class="course-group-#{@course_group.id}"
         td.name = @course_group.name
 
-.row-fluid.mt-l
-  .span12.well
-    #courses
-      .row-fluid
-        .span12
-          #course-group-enrollment-form-errors
-          #new-course-group-enrollment.hide
-            = render 'gaku/course_groups/course_group_enrollments/form'
-      .row-fluid
-        #course-group-enrollments-index
-          = render 'gaku/course_groups/course_group_enrollments/courses', :course_group => @course_group
+= well_div do
+  #courses
+    .row-fluid
+      .span12
+        #course-group-enrollment-form-errors
+        #new-course-group-enrollment.hide
+          = render 'gaku/course_groups/course_group_enrollments/form'
+    .row-fluid
+      #course-group-enrollments-index
+        = render 'gaku/course_groups/course_group_enrollments/courses', :course_group => @course_group
 
-.row-fluid
-  .span12.well
-    = link_to_edit_with_text [:edit, @course_group], :class => "edit-link span6 btn", :remote => true
-    = link_to_back course_groups_path, :class => "span6 btn"
-    
+= well_div do
+  = link_to_edit_with_text [:edit, @course_group], :remote => true
+  = link_to_back course_groups_path
+
   = render 'delete_confirm'
