--- a/core/app/views/gaku/courses/enrollments/_enrollments.html.slim
+++ b/core/app/views/gaku/courses/enrollments/_enrollments.html.slim
@@ -1,9 +1,9 @@
-#new-course-class-group-form-errors
-#new-course-class-group.hide
-  = render :partial => 'gaku/courses/enrollments/class_groups/form', course: @course, new_course_enrollment: @new_course_enrollment
-.row-fluid
+= show_header do
+  #new-course-class-group-form-errors
+  #new-course-class-group.hide
+    = render :partial => 'gaku/courses/enrollments/class_groups/form', course: @course, new_course_enrollment: @new_course_enrollment
   .pull-left
-    h4.h4-vm.course-students-count
+    = count_div 'course-students-count' do
       = print_count(@course.students.count, t('student.list'))
   .pull-right
     #new-course-student-div.pull-right
@@ -11,25 +11,23 @@
     #new-course-class-group-div.pull-right.mr-s
       = ajax_link_to_new t(:'class_group.add'), new_course_enrollment_path(course_id: @course.id), id: 'new-course-class-group-link'
 
-.row-fluid
-  .span12
-    hr
-.row-fluid
-  .span12
-    = table_for 'course-students-index' do
-      thead
-        tr
-          th.btn-inverse*{"data-field" => t('student.name')}
-            = t('student.name')
-          th.btn-inverse*{"data-field" => t('assignment.plural') + t('and') + t('exam.plural')}
-            = t('assignment.plural') + t('and') + t('exam.plural')
-          th.btn-inverse*{"data-field" => t('grade.total_points')}
-            = t('grade.total_points')
-          th.btn-inverse*{"data-field" => t('grade.rank')}
-            = t('grade.rank')
-      tbody
-        =render partial: 'gaku/courses/enrollments/enrolled', collection: @course.students, as: :enrollment
-.row-fluid
+= hr
+
+= show_body do
+  = table_for 'course-students-index' do
+    thead
+      tr
+        th.btn-inverse*{"data-field" => t('student.name')}
+          = t('student.name')
+        th.btn-inverse*{"data-field" => t('assignment.plural') + t('and') + t('exam.plural')}
+          = t('assignment.plural') + t('and') + t('exam.plural')
+        th.btn-inverse*{"data-field" => t('grade.total_points')}
+          = t('grade.total_points')
+        th.btn-inverse*{"data-field" => t('grade.rank')}
+          = t('grade.rank')
+    tbody
+      = render partial: 'gaku/courses/enrollments/enrolled', collection: @course.students, as: :enrollment
+
 
 coffee:
   $('#new-course-student-form form').validationEngine()
