--- a/core/app/views/gaku/admin/schools/update.js.erb
+++ b/core/app/views/gaku/admin/schools/update.js.erb
@@ -1,3 +1,5 @@
 $('tr#school-<%= @school.id %>').html('<%= render_js_partial("school_unit", {:school => @school}) %>');
 $("#edit-school-modal").modal("hide");
 showNotice("<%= render_flash %>");
+
+$('#admin-school-information table tbody tr').html('<%= render_js_partial("school_fields", {:school => @school}) %>')
